# pipeline-demo

./: CMakeLists.txt  Jenkinsfile
src/: main.c
tests/: CMakeLists.txt  test_main.c
